docs/0.14/_sources/api/gammapy.maps.HpxGeom.rst.txt
HpxGeom
=======

.. currentmodule:: gammapy.maps

.. autoclass:: HpxGeom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxGeom.axes
      ~HpxGeom.center_coord
      ~HpxGeom.center_pix
      ~HpxGeom.center_skydir
      ~HpxGeom.coordsys
      ~HpxGeom.data_shape
      ~HpxGeom.ipix
      ~HpxGeom.is_allsky
      ~HpxGeom.is_hpx
      ~HpxGeom.is_image
      ~HpxGeom.is_regular
      ~HpxGeom.ndim
      ~HpxGeom.nest
      ~HpxGeom.npix
      ~HpxGeom.nside
      ~HpxGeom.order
      ~HpxGeom.ordering
      ~HpxGeom.projection
      ~HpxGeom.region
      ~HpxGeom.shape_axes

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxGeom.contains
      ~HpxGeom.contains_pix
      ~HpxGeom.coord_to_idx
      ~HpxGeom.coord_to_pix
      ~HpxGeom.coord_to_tuple
      ~HpxGeom.copy
      ~HpxGeom.create
      ~HpxGeom.crop
      ~HpxGeom.downsample
      ~HpxGeom.energy_mask
      ~HpxGeom.from_hdu
      ~HpxGeom.from_hdulist
      ~HpxGeom.from_header
      ~HpxGeom.get_axis_by_name
      ~HpxGeom.get_axis_index_by_name
      ~HpxGeom.get_coord
      ~HpxGeom.get_idx
      ~HpxGeom.get_index_list
      ~HpxGeom.get_skydirs
      ~HpxGeom.global_to_local
      ~HpxGeom.identify_hpx_convention
      ~HpxGeom.local_to_global
      ~HpxGeom.make_bands_hdu
      ~HpxGeom.make_header
      ~HpxGeom.make_wcs
      ~HpxGeom.pad
      ~HpxGeom.pix_to_coord
      ~HpxGeom.pix_to_idx
      ~HpxGeom.slice_by_idx
      ~HpxGeom.solid_angle
      ~HpxGeom.to_cube
      ~HpxGeom.to_image
      ~HpxGeom.to_slice
      ~HpxGeom.to_swapped
      ~HpxGeom.to_ud_graded
      ~HpxGeom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: coordsys
   .. autoattribute:: data_shape
   .. autoattribute:: ipix
   .. autoattribute:: is_allsky
   .. autoattribute:: is_hpx
   .. autoattribute:: is_image
   .. autoattribute:: is_regular
   .. autoattribute:: ndim
   .. autoattribute:: nest
   .. autoattribute:: npix
   .. autoattribute:: nside
   .. autoattribute:: order
   .. autoattribute:: ordering
   .. autoattribute:: projection
   .. autoattribute:: region
   .. autoattribute:: shape_axes

   .. rubric:: Methods Documentation

   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: coord_to_tuple
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: energy_mask
   .. automethod:: from_hdu
   .. automethod:: from_hdulist
   .. automethod:: from_header
   .. automethod:: get_axis_by_name
   .. automethod:: get_axis_index_by_name
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: get_index_list
   .. automethod:: get_skydirs
   .. automethod:: global_to_local
   .. automethod:: identify_hpx_convention
   .. automethod:: local_to_global
   .. automethod:: make_bands_hdu
   .. automethod:: make_header
   .. automethod:: make_wcs
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: to_cube
   .. automethod:: to_image
   .. automethod:: to_slice
   .. automethod:: to_swapped
   .. automethod:: to_ud_graded
   .. automethod:: upsample
